# RaylibCMakeTemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_web.sh
examples/: raygui_example.cpp  raylib_example.cpp
include/: lfgl.hpp  lufulib.hpp  scene.hpp  scene_manager.hpp
src/: main.cpp
tools/: build_web.sh
